--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -10,5 +10,33 @@
 <android.support.v4.view.ViewPager
     android:id="@+id/viewPager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="0dp"
+    android:layout_weight="1"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#000">
+        <TextView
+            android:id="@+id/tv_firstPlatform"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingVertical="15dp"
+            android:layout_marginVertical="1px"
+            android:background="#0099cc"
+            android:text="一号站台"
+            android:gravity="center"
+            android:layout_marginRight="1px"/>
+        <TextView
+            android:id="@+id/tv_twoPlatform"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingVertical="15dp"
+            android:background="#fff"
+            android:text="二号站台"
+            android:gravity="center"
+            android:layout_marginVertical="1px"/>
+    </LinearLayout>
 </LinearLayout>
