--- a/app/src/main/res/layout/text_viewpag.xml
+++ b/app/src/main/res/layout/text_viewpag.xml
@@ -12,6 +12,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.3"
         />
     <TextView
         android:id="@+id/textView2"
@@ -37,16 +40,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/textView2"
         app:layout_constraintTop_toTopOf="@id/textView2"
-        android:text="64444m"
-        />
+        android:text="64444m" />
     <TextView
-        android:id="@+id/twoDistance"
+        android:id="@+id/tv_twoDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/textView3"
         app:layout_constraintTop_toTopOf="@id/textView3"
-        android:text="2555m"
-        />
+        android:text="2555m" />
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -55,5 +56,21 @@
         app:layout_constraintLeft_toLeftOf="@id/textView1"
         android:text="候车环境："
         android:textColor="#000"
-        />
+        android:layout_marginTop="@dimen/dimen_20"/>
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="道路环境："
+        app:layout_constraintLeft_toLeftOf="@id/textView2"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.1"/>
+    <TextView
+        android:id="@+id/tv_indexAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="测试测试\n测试"
+        app:layout_constraintTop_toBottomOf="@id/textView5"
+        app:layout_constraintLeft_toLeftOf="@id/textView5"/>
 </android.support.constraint.ConstraintLayout>
